--- a/META.js_of_ocaml.template
+++ b/META.js_of_ocaml.template
@@ -24,6 +24,10 @@ package "graphics" (
   requires = "js_of_ocaml-lwt.graphics"
 )
 
+package "log" (
+  requires = "js_of_ocaml-lwt.logger"
+)
+
 package "ocamlbuild" (
   requires = "js_of_ocaml-ocamlbuild"
 )
