Toplevel: add test_dynlink.cmi.js to the toplevel example

--- a/.gitignore
+++ b/.gitignore
@@ -52,5 +52,6 @@ doc/manual/files/wysiwyg/
 
 toplevel/examples/lwt_toplevel_bin/*.cmis.js
 toplevel/examples/lwt_toplevel_bin/test_dynlink.js
+toplevel/examples/lwt_toplevel_bin/test_dynlink.cmi.js
 toplevel/examples/lwt_toplevel_bin/toplevel.js
 toplevel/examples/lwt_toplevel_bin/eval.js
