--- a/js_of_ocaml-tyxml.opam
+++ b/js_of_ocaml-tyxml.opam
@@ -8,10 +8,10 @@ dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"
 name: "js_of_ocaml-tyxml"
 version: "dev"
 
-build: [["jbuilder" "build" "-p" name "-j" jobs]]
+build: [["dune" "build" "-p" name "-j" jobs]]
 
 depends: [
-  "jbuilder" {build & >= "1.0+beta17"}
+  "dune" {build}
   "tyxml" {>= "4.0.0"}
   "reactiveData" {>= "0.2"}
   "js_of_ocaml"
