run tests with 4.07

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ matrix:
       env: COMPILER=4.05
     - os: linux
       env: COMPILER=4.06
+    - os: linux
+      env: COMPILER=4.07
 
   allow_failures:
     - os: linux
