Better stub generation (#700)
* Switch to promotion based scheme for generating jsoo stubs

Signed-off-by: Rudi Grinberg <rudi.grinberg@gmail.com>

* Switch to pure OCaml for stub generation

Signed-off-by: Rudi Grinberg <rudi.grinberg@gmail.com>

* Simplify rule with a promote rule

Signed-off-by: Rudi Grinberg <rudi.grinberg@gmail.com>

* gen_stubs uses the ocaml parser

--- a/lib/dune
+++ b/lib/dune
@@ -8,10 +8,10 @@
 
 (rule
  (targets js_of_ocaml_stubs.c)
- (deps (file generate_stubs.sh)(glob_files *.ml))
+ (deps (glob_files *.ml))
+ (mode promote)
  (action (with-stdout-to %{targets}
-          (bash ./generate_stubs.sh)))
- )
+          (run ./gen_stubs/gen_stubs.exe %{deps}))))
 
 (rule
  (targets lib_version.ml)
