--- a/js_of_ocaml-ppx_deriving_json.opam
+++ b/js_of_ocaml-ppx_deriving_json.opam
@@ -1,4 +1,4 @@
-opam-version: "1.2"
+opam-version: "2.0"
 maintainer:   "dev@ocsigen.org"
 authors:      "Ocsigen team"
 bug-reports:  "https://github.com/ocsigen/js_of_ocaml/issues"
@@ -10,14 +10,14 @@ version: "dev"
 build: [["dune" "build" "-p" name "-j" jobs]]
 
 depends: [
-  "dune" {build}
+  "ocaml" {>= "4.02.0"}
+  "dune" {build & >= "1.2"}
   "js_of_ocaml"
   "ppx_tools"
   "ppx_deriving"
 ]
-
 conflicts: [
   "ppx_deriving"            {<="4.2.0"}
 ]
 
-available: [ ocaml-version >= "4.02.0" ]
+synopsis: "Compiler from OCaml bytecode to Javascript"
