Use the same wording as in other files.

--- a/compiler/lib/source_map_yojson.ml.in
+++ b/compiler/lib/source_map_yojson.ml.in
@@ -19,7 +19,7 @@
 
 open Source_map
 
-(* copied from the OCaml distribution (utils/misc.ml) *)
+(* copied from ocaml/utils/misc.ml *)
 let get_build_path_prefix_map =
   let init = ref false in
   let map_cache = ref None in
