--- a/compiler/lib/source_map_yojson.ml.in
+++ b/compiler/lib/source_map_yojson.ml.in
@@ -49,8 +49,8 @@ let json t =
   in
   `Assoc [
      "version",       `Float  (float_of_int t.version);
-     "file",          `String t.file;
-     "sourceRoot",    `String (match t.sourceroot with None -> "" | Some s -> s);
+     "file",          `String (rewrite_path t.file);
+     "sourceRoot",    `String (match t.sourceroot with None -> "" | Some s -> rewrite_path s);
      "names",         `List (List.map (fun s -> `String s) t.names);
      "mappings",      `String (string_of_mapping t.mappings);
      "sources",       `List (List.map (fun s -> `String (rewrite_path s)) t.sources);
