--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,21 @@ language: c
 matrix:
   include:
     - os: linux
-      env: COMPILER_VERSION=4.04
+      env: OCAML_VERSION=4.04
     - os: linux
-      env: COMPILER_VERSION=4.05
+      env: OCAML_VERSION=4.05
     - os: linux
-      env: COMPILER_VERSION=4.06
+      env: OCAML_VERSION=4.06
     - os: linux
-      env: COMPILER_VERSION=4.07
+      env: OCAML_VERSION=4.07
 
   allow_failures:
     - os: linux
-      env: COMPILER_VERSION=4.02
+      env: OCAML_VERSION=4.02
     - os: linux
-      env: COMPILER_VERSION=4.03
+      env: OCAML_VERSION=4.03
     - os: osx
-      env: COMPILER_VERSION=system
+      env: OCAML_VERSION=system
 
   fast_finish: true
 
