--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,23 @@
-sudo: required
-
 language: c
 
 matrix:
   include:
     - os: linux
-      env: COMPILER=4.04
+      env: OCAML_VERSION=4.04
     - os: linux
-      env: COMPILER=4.05
+      env: OCAML_VERSION=4.05
     - os: linux
-      env: COMPILER=4.06
+      env: OCAML_VERSION=4.06
     - os: linux
-      env: COMPILER=4.07
+      env: OCAML_VERSION=4.07
 
   allow_failures:
     - os: linux
-      env: COMPILER=4.02
+      env: OCAML_VERSION=4.02
     - os: linux
-      env: COMPILER=4.03
+      env: OCAML_VERSION=4.03
     - os: osx
-      env: COMPILER=system
+      env: OCAML_VERSION=system
 
   fast_finish: true
 
