--- a/lib/tests/dune
+++ b/lib/tests/dune
@@ -1,5 +1,5 @@
 (executables
-  (names main)
+  (names main getenv)
   (libraries js_of_ocaml unix)
   (preprocess (pps ppx_js_internal)))
 
@@ -11,6 +11,19 @@
                   %{dep:main.bc} -o %{targets})))
 
 (alias
-   (name runtest)
-   (package js_of_ocaml)
-   (action (run node %{dep:main.js})))
+  (name runtest)
+  (package js_of_ocaml)
+  (action (run node %{dep:main.js})))
+
+
+(rule
+  (targets getenv.js)
+  (action (run %{bin:js_of_ocaml}
+                  --no-runtime %{lib:js_of_ocaml-compiler:runtime.js}
+                  --setenv A=A --setenv C=C --setenv "D=±" --pretty
+                  %{dep:getenv.bc} -o %{targets})))
+
+(alias
+  (name runtest)
+  (package js_of_ocaml)
+  (action (run node %{dep:getenv.js})))
