Toplevel: update for latest tyxml

--- a/toplevel/examples/lwt_toplevel_lib/colorize_higlo.ml.in
+++ b/toplevel/examples/lwt_toplevel_lib/colorize_higlo.ml.in
@@ -1,11 +1,11 @@
 open Js_of_ocaml
 
 let text ~a_class:cl s =
-  Tyxml_js.Html.(span ~a:[a_class [cl]] [pcdata s])
+  Tyxml_js.Html.(span ~a:[a_class [cl]] [txt s])
 
 let ocaml ~a_class:cl s =
   let tks = Higlo.parse ~lang:"ocaml" s in
-  let span' cl s = Tyxml_js.Html.(span ~a:[a_class [cl]] [pcdata s]) in
+  let span' cl s = Tyxml_js.Html.(span ~a:[a_class [cl]] [txt s]) in
   let make_span = function
     | Higlo.Bcomment s -> span' "comment" s
     | Higlo.Constant s -> span' "constant" s
