--- a/lib/lwt/dune
+++ b/lib/lwt/dune
@@ -2,5 +2,5 @@
   (name js_of_ocaml_lwt)
   (public_name js_of_ocaml-lwt)
   (libraries js_of_ocaml lwt)
-  (wrapped false)
+  (wrapped (transition "Will be removed past 2019-04-01"))
   (preprocess (pps js_of_ocaml-ppx)))
