--- a/lib/tyxml/dune
+++ b/lib/tyxml/dune
@@ -3,5 +3,5 @@
   (public_name js_of_ocaml-tyxml)
   (synopsis "Tyxml for js_of_ocaml.")
   (libraries js_of_ocaml tyxml react reactiveData)
-  (wrapped false)
+  (wrapped (transition "Will be removed past 2019-04-01"))
   (preprocess (pps js_of_ocaml-ppx)))
