--- a/toplevel/lib/dune
+++ b/toplevel/lib/dune
@@ -2,7 +2,7 @@
   (name js_of_ocaml_toplevel)
   (public_name js_of_ocaml-toplevel)
   (synopsis "Js_of_ocaml toplevel library")
-  (wrapped false)
+  (wrapped (transition "Will be removed past 2019-04-01"))
   (libraries
     js_of_ocaml-compiler js_of_ocaml bytes
     compiler-libs.bytecomp compiler-libs.toplevel)
