doc:ci: fix GitHub access token name

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ deploy:
   provider: pages
   keep-history: true
   skip-cleanup: true
-  github-token: $GITHUB_TOKEN
+  github-token: $GHP_TOKEN
   local-dir: _doc
   on:
     branch: wikidoc
