--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,24 @@
 language: c
 
-install: true
-script: ./.howdocgen
+env: HOW_DOC=doc HOW_CONFIG=how.json HOW_OUT=_doc 
+
+install: 
+    - wget https://ocsigen.org/how.sh
+    - . how.sh
+    - how-install
+
+script:
+    - how-generate
+    - how-redirect "$HOW_LATEST/manual/overview" $HOW_OUT/index.html
+    - how-redirect-manual 1.4 1.0.9
+    - how-redirect-manual 1.4 1.1.1
+    - how-redirect-manual 1.4 1.2
+    - how-redirect-manual 1.4 1.3
+    - how-redirect-manual 2.4.1 2.0
+    - how-redirect-manual 2.4.1 2.1
+    - how-redirect-manual 2.4.1 2.2
+    - how-redirect-manual 2.4.1 2.3
+    - how-redirect-manual 2.4.1 2.4
 
 deploy:
   provider: pages
