Misc: move files

--- a/lib/js_of_ocaml/dune
+++ b/lib/js_of_ocaml/dune
@@ -14,5 +14,5 @@
 
 (rule
  (targets lib_version.ml)
- (deps (:input-file ../version.ml.in))
+ (deps (:input-file ../../version.ml.in))
  (action (copy %{input-file} %{targets})))
