--- a/examples/minesweeper/dune
+++ b/examples/minesweeper/dune
@@ -10,5 +10,5 @@
          --source-map %{dep:main.bc} -o %{targets} --pretty)))
 
 (alias
-  (name DEFAULT)
+  (name default)
   (deps main.js index.html (glob_files sprites/*.{png,svg})))
