--- a/examples/separate_compilation/dune
+++ b/examples/separate_compilation/dune
@@ -36,5 +36,5 @@
   (action (run %{bin:jsoo_link} %{dep:myruntime.js} %{dep:stdlib.js} %{dep:module1.js} %{dep:module2.js} -o %{targets})))
 
 (alias
-  (name DEFAULT)
+  (name default)
   (deps myruntime.js stdlib.js module1.js module2.js bin.js index.html))
