--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
       env: OCAML_VERSION=4.07 MODE=build
       name: "4.07 all targets"
     - os: osx
-      env: OCAML_VERSION=system MODE=opam
+      env: OCAML_VERSION=4.07 MODE=opam
 
   allow_failures:
     - os: linux
@@ -26,7 +26,7 @@ matrix:
     - os: linux
       env: OCAML_VERSION=4.03 MODE=opam
     - os: osx
-      env: OCAML_VERSION=system MODE=opam
+      env: OCAML_VERSION=4.07 MODE=opam
 
   fast_finish: true
 
