--- a/api/dune
+++ b/api/dune
@@ -1,29 +1,22 @@
 (alias
   (name ocsigen-doc)
   (deps
-    ../tools/wikidoc/odoc_wiki.cmxs
-    index
-    (package js_of_ocaml-ppx)
+    (universe)
+    (source_tree ../)
     (package js_of_ocaml)
     (package js_of_ocaml-lwt)
     (package js_of_ocaml-tyxml)
     (package js_of_ocaml-toplevel)
-    (package js_of_ocaml-ocamlbuild)
-  )
-  (action (bash
-   "function path { echo -I $1/.*.objs $1/*[^p][^p].mli; };  \
-    ocamlfind ocamldoc \
-    -d ./ -intro index -g ../tools/wikidoc/odoc_wiki.cmxs -open Js_of_ocaml \
-    -package tyxml -package react -package reactiveData -open Js_of_ocaml_tyxml \
-    -package lwt -open Js_of_ocaml_lwt \
-    -package graphics \
-    -package compiler-libs.bytecomp,compiler-libs.common,compiler-libs.toplevel \
-    -package ocamlbuild \
-    $(path ../lib/js_of_ocaml) \
-    $(path ../lib/deriving_json) \
-    $(path ../lib/tyxml) \
-    $(path ../lib/lwt) \
-    $(path ../lib/lwt/graphics) \
-    $(path ../toplevel/lib) \
-    $(path ../ocamlbuild) \
-    ")))
+    (package js_of_ocaml-ocamlbuild))
+  (action (run
+    %{dep:../tools/docgen/docgen.exe}
+      -wikidoc %{dep:../tools/wikidoc/odoc_wiki.cmxs}
+      -index %{dep:index}
+      %{dep:../lib/js_of_ocaml/dune}
+      %{dep:../lib/deriving_json/dune}
+      %{dep:../lib/lwt/dune}
+      %{dep:../lib/lwt/graphics/dune}
+      %{dep:../lib/tyxml/dune}
+      %{dep:../toplevel/lib/dune}
+      %{dep:../ocamlbuild/dune}
+      )))
