Bench: update run.config

--- a/benchmarks/run.config
+++ b/benchmarks/run.config
@@ -1,4 +1,9 @@
-interpreter v8 /home/vincent/src/js/v8-read-only/shell
-interpreter tm /home/vincent/src/js/mozilla-central-7dda35eab7fc/objdir-ff-release/dist/bin/js -j -m
-interpreter nitro /home/vincent/src/js/WebKit/Programs/jsc
-#interpreter oldv8 /usr/bin/nodejs
+#Node: apt-get install nodejs
+interpreter node /usr/bin/node
+#
+#SpiderMonkey: apt-get install libmozjs-52-dev
+interpreter sm /usr/bin/js52 -m
+#
+#interpreter v8
+#interpreter nitro
+#interpreter tracemonkey
