--- a/benchmarks/report-js.config
+++ b/benchmarks/report-js.config
@@ -1,2 +1,2 @@
-histogramref times v8 js_of_ocaml #d98e2d compiled to JS (V8)
-histogram times v8 js #d9112d native JS (V8)
+histogramref times node js_of_ocaml #d98e2d compiled to JS (node)
+histogram times node js #d9112d native JS (node)
