--- a/benchmarks/report-nativejs.config
+++ b/benchmarks/report-nativejs.config
@@ -1,2 +1,2 @@
-histogram times v8 js #775588 native JS (V8)
-histogramref times v8 js_of_ocaml #fbaf4f compiled to JS (V8)
+histogram times node js #775588 native JS (node)
+histogramref times node js_of_ocaml #fbaf4f compiled to JS (node)
