--- a/benchmarks/run.config
+++ b/benchmarks/run.config
@@ -2,7 +2,7 @@
 interpreter node /usr/bin/node
 #
 #SpiderMonkey: apt-get install libmozjs-52-dev
-interpreter sm /usr/bin/js52 -m
+interpreter sm /usr/bin/js52 -f
 #
 #interpreter v8
 #interpreter nitro
