--- a/benchmarks/report-time.config
+++ b/benchmarks/report-time.config
@@ -1,6 +1,4 @@
 histogram times "" opt #729fcf ocamlopt
 histogram times "" byte #204a87 ocamlc
-#histogram times oldv8 js_of_ocaml #fbaf4f old V8
-histogramref times v8 js_of_ocaml #fbaf4f V8
-histogram times nitro js_of_ocaml #96c296 Nitro
-histogram times tm js_of_ocaml #fb4f4f JaegerMonkey
+histogramref times node js_of_ocaml #fbaf4f node
+histogram times sm js_of_ocaml #fb4f4f SpiderMonkey
