--- a/dune
+++ b/dune
@@ -1,5 +1,6 @@
 (* -*- tuareg -*- *)
 open Jbuild_plugin.V1
+
 let git_version =
   if not (try Sys.is_directory ".git" with _ -> false)
   then ""
@@ -11,10 +12,12 @@ let git_version =
 let version =
   let ic = open_in "VERSION" in
   let version = input_line ic in
-  close_in ic;
-  version
+  close_in ic; version
 
-let () = send @@ Printf.sprintf {|
+let () =
+  send
+  @@ Printf.sprintf
+       {|
 
 (env
  (dev
@@ -25,4 +28,6 @@ let () = send @@ Printf.sprintf {|
   (targets version.ml.in)
   (action (with-stdout-to %%{targets}
            (echo "let s = \"%s\"\nlet git_version = \"%s\""))))
-|} version git_version
+|}
+       version
+       git_version
