--- a/ppx/ppx_js/lib/dune
+++ b/ppx/ppx_js/lib/dune
@@ -13,3 +13,7 @@
 (rule
   (targets ppx_js_internal.ml)
   (action (copy %{dep:../lib_internal/ppx_js_internal.ml} %{targets})))
+
+(rule
+  (targets compat.ml)
+  (action (copy %{dep:../lib_internal/compat.ml} %{targets})))
