--- a/ppx/ppx_js/lib_internal/dune
+++ b/ppx/ppx_js/lib_internal/dune
@@ -3,5 +3,11 @@
   (libraries compiler-libs.common
              ocaml-migrate-parsetree
              ppx_tools_versioned)
+  (modules ppx_js_internal compat)
   (kind ppx_rewriter)
   (preprocess (pps ppx_tools_versioned.metaquot_406)))
+
+(rule
+  (targets compat.ml)
+  (action (with-stdout-to %{targets}
+           (run %{dep:gen/gen.exe}))))
