--- a/tools/toplevel_expect/dune
+++ b/tools/toplevel_expect/dune
@@ -9,10 +9,4 @@
 	   toplevel_expect_test.ml-4.05
            toplevel_expect_test.ml-4.08
 	   toplevel_expect_test.ml-default)
-  (action  (with-stdout-to toplevel_expect_test.ml
-  	      (run
-	      ../select/select.exe
-	      toplevel_expect_test.ml-4.04
-	      toplevel_expect_test.ml-4.05
-	      toplevel_expect_test.ml-4.08
-	      toplevel_expect_test.ml-default))))
+  (action  (with-stdout-to %{targets} (run %{deps}))))
