--- a/toplevel/lib/dune
+++ b/toplevel/lib/dune
@@ -8,8 +8,9 @@
     compiler-libs.bytecomp compiler-libs.toplevel)
   (preprocess (pps js_of_ocaml-ppx)))
 
-
 (rule
   (targets js_of_ocaml_toplevel_compat.ml)
-  (action (with-stdout-to %{targets}
-           (run %{dep:gen/gen.exe}))))
+  (deps ../../tools/select/select.exe
+        compat.ml-4.08
+        compat.ml-default)
+  (action (with-stdout-to %{targets} (run %{deps}))))
