Adds capibility for writing tests which inspect javascript
This PR adds helper functions for inspecting Javascript.  While
asserting that some Javascript produced by the compiler maintains
some expected property.  Right now there is only one additional
test, added in
`compiler/tests/expect_tests/variable_declaration_output.ml`
but further PRs are planned to be built on top of this infrastructure

--- a/compiler/tests/expect_tests/dune
+++ b/compiler/tests/expect_tests/dune
@@ -1,6 +1,6 @@
 (library
  (name expect_tests)
- (libraries js_of_ocaml_compiler)
+ (libraries js_of_ocaml_compiler unix ocaml-compiler-libs.bytecomp)
  (inline_tests)
  (preprocess (pps ppx_expect)))
 
