--- a/compiler/tests/empty_cma/dune
+++ b/compiler/tests/empty_cma/dune
@@ -2,7 +2,8 @@
   (targets empty.js)
   (action (progn
             (run %{bin:ocamlc} -a -o empty.cma)
-            (run %{bin:js_of_ocaml} empty.cma --pretty -o empty.js))))
+            (run %{bin:js_of_ocaml} --pretty -o empty.js --no-runtime
+                 %{lib:js_of_ocaml-compiler:runtime.js} empty.cma))))
 
 (alias
   (name runtest)
